# Seleric_Agent_Core

./: .env.example  .gitignore  .mcp.json  DASHBOARD_CUBE_METRICS.md  MCP_Agent_Architecture_MVP.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
catalogue/: CANONICAL_DATA_MODEL.md  CUBE_AUDIT_REPORT.md  CUBE_SEMANTIC_AUDIT.md  DASHBOARD_ALIGNMENT_DRIFT_REPORT.md  GOAL_COMPLETION_STATUS.md  METRIC_INVENTORY_MATRIX.md  QUERY_COVERAGE_REPORT.md  brands.yaml  deprecations.yaml  mcp_query_capability_catalogue.md  metric_inventory_matrix.csv  views.yaml
catalogue/actions/: pause_meta_ad.yaml
catalogue/dimensions/: core.yaml
catalogue/glossary/: terms.yaml
catalogue/metrics/: active_orders.yaml  add_to_cart_events.yaml  add_to_cart_sessions.yaml  amazon_ad_spend.yaml  amazon_ads_clicks.yaml  amazon_ads_cpc.yaml  amazon_ads_cpm.yaml  amazon_ads_ctr.yaml  amazon_ads_impressions.yaml  amazon_ads_roas.yaml  amazon_ads_spend.yaml  aov.yaml  (+206 more)
cube/: .env.example  .gitignore  AGENTS.md  CHART_QUERY_REFERENCE.md  SEMANTIC_LAYER_GAP_ANALYSIS.md  cube.js  package.json
doc/: anthropic_pattern.md
docs/: openmetadata_mcp.md
scripts/: agent_policy.md  chat_client.py  chat_web.py  chat_web_ui.html  run_business_query_suite.py  run_golden_questions.py  smoke_cube.py  sync_openmetadata_catalogue.py  validate_catalogue.py
tests/: conftest.py  test_action_broker.py  test_canonical_model.py  test_catalogue.py  test_gateway_server.py  test_insight_engine.py  test_live_smoke.py  test_provenance.py  test_query_planner.py
(+80 files in other folders)
